--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
+    "@vercel/analytics": "^1.6.1",
     "eslint-config-next": "^16.1.6",
     "next": "^16.1.6",
     "react": "^19.2.0",
