Add new environment variables for Supabase service role and dashboard key in .env.example. Update README to include these keys and provide details on dashboard functionality for code management. Enhance TrenchesTrainer component with additional themes and improve noise tickers list.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_SUPABASE_URL=https://YOUR_PROJECT_REF.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
+SUPABASE_SERVICE_ROLE_KEY=YOUR_SUPABASE_SERVICE_ROLE_KEY
+DASHBOARD_KEY=set_a_long_random_dashboard_key
