--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "recover:profiles": "node scripts/recover-profile-stats-from-history.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
