Update ESLint configuration to ignore additional directories, refine linting command in package.json, and enhance component state management in Trenches. Refactor various components for improved readability and performance, including adjustments to hooks and UI elements in ProfileTab and SessionSummary.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint src --max-warnings=0",
     "recover:profiles": "node scripts/recover-profile-stats-from-history.mjs"
   },
   "dependencies": {
