Enhance practice session mechanics by introducing difficulty multipliers and updating related components. Add new commands in package.json for Solana smoke tests and local development. Update .gitignore to include Solana artifacts. Introduce a new CSV file for trenches content and refine timer functionality in PracticeMode for improved user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,13 @@ out
 .next
 .env.local
 .vercel
+
+# Solana / Anchor local artifacts
+.solana-smoke/
+.solana-smoke-local/
+test-ledger/
+solana/wager-escrow/target/
+solana/wager-escrow/.anchor/
+solana/wager-escrow/node_modules/
+solana/wager-escrow/test-ledger/
+solana/wager-escrow/.keys/
