Update dependencies in package.json and package-lock.json for Solana wallet integration. Enhance ranking simulation script by adding tier penalty multiplier calculations and updating README for clarity. Implement refund logic in wager escrow program and add corresponding tests for refund functionality. Introduce roadmap page in the app with detailed phases and objectives.

--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "rank:sim:solo": "node scripts/rank/simulate-solo-rp.mjs"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.32.1",
     "@remotion/google-fonts": "^4.0.427",
     "@remotion/media": "^4.0.427",
     "@remotion/transitions": "^4.0.427",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.95.3",
     "@vercel/analytics": "^1.6.1",
+    "bs58": "^6.0.0",
     "eslint-config-next": "^16.1.6",
     "next": "^16.1.6",
     "react": "^19.2.0",
