Update environment configuration, enhance authentication flow, and improve user experience
- Remove DASHBOARD_KEY from .env.example for security.
- Add src/remotion/ to .gitignore to prevent unnecessary file tracking.
- Update video rendering commands in package.json for consistency.
- Revise README to clarify environment variable requirements and streamline instructions.
- Implement username-based login API for improved authentication flexibility.
- Enhance AuthScreen component to support username login and resend verification email functionality.
- Add email confirmation and password recovery templates for better user communication.
- Introduce database migration for player profile rank fields and constraints to align with app logic.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ solana/wager-escrow/.anchor/
 solana/wager-escrow/node_modules/
 solana/wager-escrow/test-ledger/
 solana/wager-escrow/.keys/
+src/remotion/
