--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "solana:anchor:install:mac": "bash scripts/solana/install-rust-anchor-macos.sh",
     "solana:wager:test": "npm --prefix solana/wager-escrow run test",
     "video:studio": "remotion studio",
-    "video:render": "remotion render FirstTxRoadmapDemo16x9 out/firsttx-roadmap-demo.mp4",
-    "video:render:preview": "remotion render FirstTxRoadmapDemo16x9 out/firsttx-roadmap-demo-preview.mp4 --jpeg-quality=70 --crf=28 --concurrency=2",
+    "video:render": "remotion render FirstTxRoadmap16x9 out/firsttx-roadmap.mp4",
+    "video:render:preview": "remotion render FirstTxRoadmap16x9 out/firsttx-roadmap-preview.mp4 --jpeg-quality=70 --crf=28 --concurrency=2",
     "content:export": "node scripts/content/export-game-data-to-csv.mjs",
     "content:import": "node scripts/content/import-csv-to-game-data.mjs",
     "content:sync": "npm run content:export && npm run content:import",
